environments/gloo-platform/gwapi-mgmt-gm-workers/mgmt/homer-app/base/homer-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: homer-dashboard
  namespace: homer-portal
  labels:
    example: homer-dashboard
    gateway: https
spec:
  hostnames:
  - "homer.glootest.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - backendRefs:
        - name: homer-portal
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /solo
